tests-snapshots/dbc-cantools/multiplex_2.snap.stderr
error[E0425]: cannot find type `ExtendedS0Index` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:793:36
    |
793 |     pub fn s0(&mut self) -> Result<ExtendedS0Index, CanError> {
    |                                    ^^^^^^^^^^^^^^^
...
901 | pub enum ExtendedS6Index {
    | ------------------------ similarly named enum `ExtendedS6Index` defined here
    |
help: an enum with a similar name exists
    |
793 -     pub fn s0(&mut self) -> Result<ExtendedS0Index, CanError> {
793 +     pub fn s0(&mut self) -> Result<ExtendedS6Index, CanError> {
    |
help: you might be missing a type parameter
    |
670 | impl<ExtendedS0Index> Extended {
    |     +++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtendedS0M0` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:795:41
    |
795 |             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
    |                                         ^^^^^^^^^^^^
...
916 | pub struct ExtendedS6M0 {
    | ----------------------- similarly named struct `ExtendedS6M0` defined here
    |
help: a struct with a similar name exists
    |
795 -             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
795 +             0 => Ok(ExtendedS0Index::M0(ExtendedS6M0 { raw: self.raw })),
    |

error[E0422]: cannot find struct, variant or union type `ExtendedS0M1` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:796:41
     |
 796 |             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
     |                                         ^^^^^^^^^^^^
...
1031 | pub struct ExtendedS6M1 {
     | ----------------------- similarly named struct `ExtendedS6M1` defined here
     |
help: a struct with a similar name exists
     |
 796 -             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
 796 +             1 => Ok(ExtendedS0Index::M1(ExtendedS6M1 { raw: self.raw })),
     |

error[E0422]: cannot find struct, variant or union type `ExtendedS0M2` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:797:41
     |
 797 |             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
     |                                         ^^^^^^^^^^^^
...
1146 | pub struct ExtendedS6M2 {
     | ----------------------- similarly named struct `ExtendedS6M2` defined here
     |
help: a struct with a similar name exists
     |
 797 -             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
 797 +             2 => Ok(ExtendedS0Index::M2(ExtendedS6M2 { raw: self.raw })),
     |

error[E0425]: cannot find type `ExtendedS0M0` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:827:37
    |
827 |     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^
...
916 | pub struct ExtendedS6M0 {
    | ----------------------- similarly named struct `ExtendedS6M0` defined here
    |
help: a struct with a similar name exists
    |
827 -     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
827 +     pub fn set_m0(&mut self, value: ExtendedS6M0) -> Result<(), CanError> {
    |

error[E0425]: cannot find type `ExtendedS0M1` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:836:37
     |
 836 |     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
     |                                     ^^^^^^^^^^^^
...
1031 | pub struct ExtendedS6M1 {
     | ----------------------- similarly named struct `ExtendedS6M1` defined here
     |
help: a struct with a similar name exists
     |
 836 -     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
 836 +     pub fn set_m1(&mut self, value: ExtendedS6M1) -> Result<(), CanError> {
     |

error[E0425]: cannot find type `ExtendedS0M2` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:845:37
     |
 845 |     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
     |                                     ^^^^^^^^^^^^
...
1146 | pub struct ExtendedS6M2 {
     | ----------------------- similarly named struct `ExtendedS6M2` defined here
     |
help: a struct with a similar name exists
     |
 845 -     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
 845 +     pub fn set_m2(&mut self, value: ExtendedS6M2) -> Result<(), CanError> {
     |

error: invalid suffix `i32` for float literal
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:1273:30
     |
1273 |     pub const S9_MIN: i32 = -1.34_i32;
     |                              ^^^^^^^^ invalid suffix `i32`
     |
     = help: valid suffixes are `f32` and `f64`

error: invalid suffix `i32` for float literal
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:1545:21
     |
1545 |         if value < -1.34_i32 || 1235_i32 < value {
     |                     ^^^^^^^^ invalid suffix `i32`
     |
     = help: valid suffixes are `f32` and `f64`

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:827:5
    |
753 |     pub fn set_m0(&mut self, value: ExtendedS6M0) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m0`
...
827 |     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:836:5
    |
762 |     pub fn set_m1(&mut self, value: ExtendedS6M1) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m1`
...
836 |     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0592]: duplicate definitions with name `set_m2`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:845:5
    |
771 |     pub fn set_m2(&mut self, value: ExtendedS6M2) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m2`
...
845 |     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m2`

error[E0433]: cannot find type `ExtendedS0Index` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:795:21
    |
795 |             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^ use of undeclared type `ExtendedS0Index`
    |
help: an enum with a similar name exists
    |
795 -             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
795 +             0 => Ok(ExtendedS6Index::M0(ExtendedS0M0 { raw: self.raw })),
    |

error[E0433]: cannot find type `ExtendedS0Index` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:796:21
    |
796 |             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^ use of undeclared type `ExtendedS0Index`
    |
help: an enum with a similar name exists
    |
796 -             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
796 +             1 => Ok(ExtendedS6Index::M1(ExtendedS0M1 { raw: self.raw })),
    |

error[E0433]: cannot find type `ExtendedS0Index` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:797:21
    |
797 |             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^ use of undeclared type `ExtendedS0Index`
    |
help: an enum with a similar name exists
    |
797 -             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
797 +             2 => Ok(ExtendedS6Index::M2(ExtendedS0M2 { raw: self.raw })),
    |
